// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`look up book by id 1`] = `
Object {
  "_id": "5cf5805fb53e011a64671582",
  "name": "The Fellowship Of The Ring",
}
`;

exports[`look up book list 1`] = `
Array [
  Object {
    "_id": "5cf5805fb53e011a64671582",
    "name": "The Fellowship Of The Ring",
  },
  Object {
    "_id": "5cf58077b53e011a64671583",
    "name": "The Two Towers",
  },
  Object {
    "_id": "5cf58080b53e011a64671584",
    "name": "The Return Of The King",
  },
]
`;
